--- a/pyproject.toml
+++ b/pyproject.toml
@@ -172,6 +172,7 @@ disable = [
     "too-many-locals",
     "too-many-public-methods",
     "too-many-boolean-expressions",
+    "too-many-positional-arguments",
     "wrong-import-order",
     "consider-using-namedtuple-or-dataclass",
     "consider-using-assignment-expr",
